adv tax card not visible issue fixed

--- a/src/app/modules/itr-filing/itr-wizard/pages/taxes-paid/taxes-paid.component.css
+++ b/src/app/modules/itr-filing/itr-wizard/pages/taxes-paid/taxes-paid.component.css
@@ -11,12 +11,15 @@
   overflow-x: auto;
 }
 
+.spc-blw {
+  margin-bottom: 150px;
+}
+
 table {
   border-collapse: collapse;
   border-spacing: 0;
   width: 100%;
   border: 1px solid #ddd;
-
 }
 
 th {
@@ -34,7 +37,7 @@ td {
 }
 
 tr:nth-child(even) {
-  background-color: #f2f2f2
+  background-color: #f2f2f2;
 }
 
 .space-in {
